# ghidra-headless-mcp

./: CHANGELOG.md  FEATURE_SUPPORT.md  README.md  RELEASING.md  ghidra_headless_mcp.py  pyproject.toml
ghidra_headless_mcp/: __init__.py  backend.py  cli.py  fake_ghidra.py  fuzz_support.py  fuzzer.py  server.py
samples/: ls
tests/: conftest.py  test_all_tools_semantics.py  test_all_tools_smoke.py  test_backend_integration.py  test_cli_subprocess.py  test_fake_backend_categories.py  test_fuzzer.py  test_registry_consistency.py  test_server.py  tool_harness.py
tests/fixtures/: hello  hello.c
